controller tests, states tests and code analyze recommendations